# tempo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USERGUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
analysis/: exp4_distribution_fits.csv  exp4_omega_main.npy  exp4_omega_qrqcw.npy  exp4_per_recording.csv  exp4_r_main.npy  exp4_r_qrqcw.npy  exp4_sigma_elem_main.npy  exp4_sigma_elem_qrqcw.npy  exp4_sigma_gap_main.npy  exp4_sigma_gap_qrqcw.npy  rule_based_results.csv
calibration_dataset/: RECORDINGS.md
calibration_dataset/group_a_wpm_gap/: 20190823_9a9cw iz8vkw_janus_7008 khz.txt  20200820_pa-.iz0ngh iz8vkw_paddles_qrq.txt  20210613_pa-iz0ngh iz8vkw_paddle_14039 khz.txt  20210619_dk4lx iz8vkw_paddle_20900 khz.txt  20221103_ik6ihm iz8vkw_paddle_qrq_7027 khz.txt  20230101_ik6ihm iz8vkw_30 wpm_paddle_test keyer_3567 khz.txt  20230210_iu0pjj i8qfk iz8vkw_25-40 wpm_7034 khz.txt  (+1 more)
data/: alpha_stochastic.h5  alphanum_stochastic.h5  top50_stochastic.h5
notebooks/: experiment1_ambiguity_calibration.ipynb  experiment2_temporal_irreducibility.ipynb  experiment3_stochastic_robustness.ipynb  experiment4_operator_parameter_calibration.ipynb  experiment52_batch_audio_visualization.py  experiment5_architecture_ablation.ipynb  experiment5_notes.md  experment3_notes.md  rule_based_decoder.py  visualize_spike_trains.ipynb
tempo/: __init__.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_cli.py  test_dataset.py  test_encode_word.py  test_generate_dataset.py  test_hdf5.py  test_morse_table.py  test_protocol.py  test_tempo_dataset.py
(+49 files in other folders)
